--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "notes-app",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
+    "mongoose": "^5.11.12",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.2"
   }
 }
